--- a/PersonalSiteWeb/Web.config
+++ b/PersonalSiteWeb/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-PersonalSiteWeb-20170624064431.mdf;Initial Catalog=aspnet-PersonalSiteWeb-20170624064431;Integrated Security=True;User Instance=True"
       providerName="System.Data.SqlClient" />
@@ -81,4 +81,11 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <location path="Content/Img">
+    <system.webServer>
+      <staticContent>
+        <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="365.0:00:00" />
+      </staticContent>
+    </system.webServer>
+  </location>
 </configuration>
