Boost profile image. Fix connection and exclude some files.

--- a/PersonalSiteWeb/Web.config
+++ b/PersonalSiteWeb/Web.config
@@ -8,8 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-PersonalSiteWeb-20170624064431.mdf;Initial Catalog=aspnet-PersonalSiteWeb-20170624064431;Integrated Security=True;User Instance=True"
-      providerName="System.Data.SqlClient" />
+    <add name="PersonalSiteConnection" connectionString="Data Source=(Local);Initial Catalog=au.com.kevy;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
